# Contradiction-Aware-Graph-Rag

./: .env.example  .gitignore  CLAUDE.md  Readme.md  agent.py  make.py  pyproject.toml  settings.py
.claude/: settings.json
clients/: embed.py  semantic_scholar.py  store.py
src/: agent.py  dev.py  make.py  pipeline.py  schema.py
src/UI/: agent_ui.py  pipeline_ui.py
src/clients/: embed.py  semantic_scholar.py  store.py
src/utils/: chunking.py  citation_graph.py  fetch.py  topics.py
tests/: chunking.py  eval_vectordb.py  topics.py  vector_store.py
vectordb/: chunking.py  citation_graph.py  converter.py  fetch.py  pipeline.py  schema.py
