[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=4.0.0",
    "chromadb>=1.5.9",
    "gradio>=6.20.0",
    "httpx>=0.28.1",
    "langchain>=1.3.14",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "langgraph-api>=0.11.0",
    "langgraph-cli[inmem]>=0.4.31",
    "langgraph-sdk>=0.4.2",
    "lxml>=6.1.1",
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
]
